--- a/Paris.html
+++ b/Paris.html
@@ -28,7 +28,7 @@
 		</div>
 		
 		<div class = "division">
-			<img id = "image" alt = "A picture of Paris's current apperance." src = "Paris.jpg" height = 300>
+			<img id = "image" alt = "A picture of Paris's current apperance." src = "PARIS.jpg" height = 300>
 			<div>
 				<h2>Paris Belle-Mort</h2>
 				<p>Paris Belle-Mort comes off as an easy going monarch with great leadership skills and no problems, but inside his brain, there lives a mess.  I mean for him to be a representation of both princes and princesses in fictional works, so he often waits for someone to save him (that someone being <a href = "Bee.html">Bee</a>) when he is perfectly capable and able to save himself.  He often gets annoyed at repetitive actions and flawed logic, so he hates, hates, HATES <a href = "Ren.html">Ren</a>, the most selfish being on Earth.  On the contrary, he enjoys hanging out with <a href = "Clown&stuff.html">the clowns</a>, especially Deine (and Paris also continuously tries to recruit Deine as the student council treasurer).</p>
